# evenframe

./: .gitattributes  .gitignore  Cargo.toml  pixi.toml  rust-toolchain.toml
evenframe/: Cargo.toml
evenframe/src/: cli.rs  config_builders.rs  lib.rs  main.rs  workspace_scanner.rs
evenframe/src/commands/: cache.rs  generate.rs  info.rs  init.rs  mod.rs  schemasync.rs  test_plugin.rs  typesync.rs  validate.rs
evenframe_core/: Cargo.toml
evenframe_core/src/: config.rs  default.rs  dependency.rs  error.rs  lib.rs  log.rs  registry.rs  traits.rs  validator.rs  wrappers.rs
evenframe_core/src/derive/: attributes.rs  coordinate_parser.rs  deserialization_impl.rs  enum_impl.rs  imports.rs  mod.rs  struct_impl.rs  type_parser.rs  validator_parser.rs
evenframe_core/src/schemasync/: config.rs  define_config.rs  edge.rs  event.rs  mod.rs  permissions.rs  table.rs
evenframe_core/src/schemasync/compare/: filter.rs  import.rs  mod.rs  sql.rs  surql.rs  types.rs
evenframe_core/src/schemasync/database/: mod.rs
evenframe_core/src/schemasync/mockmake/: coordinate.rs  field_value.rs  field_value_recursive.rs  format.rs  mod.rs  plugin.rs  plugin_types.rs  regex_val_gen.rs  validator_gen.rs
evenframe_core/src/schemasync/surql/: access.rs  define.rs  insert.rs  mod.rs  remove.rs  upsert.rs  value.rs
evenframe_core/src/tooling/: build_config.rs  config_builders.rs  expansion_cache.rs  generator.rs  mod.rs  workspace_scanner.rs
evenframe_core/src/types/: foreign_type_registry.rs  mod.rs
evenframe_core/src/types/field_type/: mod.rs
evenframe_core/src/typesync/: arktype.rs  config.rs  doc_comment.rs  effect.rs  effect_template.rs  file_grouping.rs  flatbuffers.rs  import_resolver.rs  macroforge.rs  mod.rs  plugin.rs  plugin_runtime.rs  plugin_types.rs  protobuf.rs  synthetic_plugin.rs  synthetic_plugin_types.rs  testing.rs
evenframe_core/src/typesync/flatbuffers_parser/: ast.rs  converter.rs  lexer.rs  mod.rs  parser.rs  (+1 more)
evenframe_core/tests/: scanner_index_e2e.rs  snapshot_tests.rs
evenframe_core/tests/snapshots/: snapshot_tests__arktype__arktype_doc_comments.snap  snapshot_tests__arktype__arktype_enum_adjacently_tagged.snap  snapshot_tests__arktype__arktype_enum_externally_tagged.snap  snapshot_tests__arktype__arktype_enum_internally_tagged.snap  snapshot_tests__arktype__arktype_enum_untagged.snap  snapshot_tests__arktype__arktype_enum_with_data.snap  snapshot_tests__arktype__arktype_foreign_types.snap  snapshot_tests__arktype__arktype_nested_struct.snap  snapshot_tests__arktype__arktype_optional_fields.snap  snapshot_tests__arktype__arktype_record_links.snap  snapshot_tests__arktype__arktype_simple_struct.snap  snapshot_tests__arktype__arktype_tuples.snap  snapshot_tests__arktype__arktype_validators.snap  snapshot_tests__arktype__arktype_vec_and_map.snap  snapshot_tests__effect__effect_enum_adjacently_tagged.snap  snapshot_tests__effect__effect_enum_with_data.snap  snapshot_tests__flatbuffers__flatbuffers_doc_comments.snap  snapshot_tests__flatbuffers__flatbuffers_enum_adjacently_tagged.snap  snapshot_tests__flatbuffers__flatbuffers_enum_externally_tagged.snap  snapshot_tests__flatbuffers__flatbuffers_enum_internally_tagged.snap  snapshot_tests__flatbuffers__flatbuffers_enum_untagged.snap  snapshot_tests__flatbuffers__flatbuffers_enum_with_data.snap  snapshot_tests__flatbuffers__flatbuffers_foreign_types.snap  snapshot_tests__flatbuffers__flatbuffers_nested_struct.snap  snapshot_tests__flatbuffers__flatbuffers_optional_fields.snap  snapshot_tests__flatbuffers__flatbuffers_record_links.snap  snapshot_tests__flatbuffers__flatbuffers_simple_struct.snap  snapshot_tests__flatbuffers__flatbuffers_tuples.snap  snapshot_tests__flatbuffers__flatbuffers_validators.snap  snapshot_tests__flatbuffers__flatbuffers_vec_and_map.snap  snapshot_tests__protobuf__protobuf_doc_comments.snap  snapshot_tests__protobuf__protobuf_enum_adjacently_tagged.snap  snapshot_tests__protobuf__protobuf_enum_externally_tagged.snap  snapshot_tests__protobuf__protobuf_enum_internally_tagged.snap  snapshot_tests__protobuf__protobuf_enum_untagged.snap  snapshot_tests__protobuf__protobuf_enum_with_data.snap  snapshot_tests__protobuf__protobuf_foreign_types.snap  snapshot_tests__protobuf__protobuf_nested_struct.snap  snapshot_tests__protobuf__protobuf_optional_fields.snap  snapshot_tests__protobuf__protobuf_record_links.snap  (+9 more)
evenframe_derive/: Cargo.toml
evenframe_derive/src/: deserialization_impl.rs  enum_impl.rs  imports.rs  lib.rs  struct_impl.rs  union_impl.rs
evenframe_derive/tests/: trybuild.rs
evenframe_playground/: .env.example  .gitignore  Cargo.toml  evenframe.toml
evenframe_playground/.evenframe/plugins/: complex_rule.wasm  decimal_override.wasm  hello_plugin.wasm  stress_test.wasm  synthetic_test.wasm  test_user.wasm
evenframe_playground/src/: main.rs
evenframe_playground/src/bindings/: arktype.ts  bindings.ts  schema.fbs  schema.proto
evenframe_playground/src/handlers/: auth.rs  blog.rs  ecommerce.rs  mod.rs
evenframe_playground/src/models/: auth.rs  blog.rs  ecommerce.rs  edge_cases.rs  extreme_edge_cases.rs  mod.rs
evenframe_playground/test_plugins/complex_rule/: Cargo.toml
evenframe_playground/test_plugins/decimal_override/: Cargo.toml
evenframe_playground/test_plugins/hello_plugin/: Cargo.toml
evenframe_playground/test_plugins/stress_test/: Cargo.toml
evenframe_playground/test_plugins/synthetic_test/: Cargo.toml
evenframe_playground/test_plugins/test_user/: Cargo.toml
evenframe_playground/tests/: array_style_e2e_test.rs  build_api_e2e_test.rs  cli_e2e_test.rs  complex_rule_e2e_test.rs  evenframe_output_test.rs  expander_e2e_test.rs  flatbuffers_output_test.rs  flatbuffers_parser_e2e_test.rs  generics_e2e_test.rs  integration_test.rs  pipeline_e2e_test.rs  protobuf_output_test.rs  protobuf_parser_e2e_test.rs  rust_derives_e2e_test.rs  schema_verification_test.rs  synthetic_plugin_e2e_test.rs  test_user_plugin_e2e_test.rs  type_plugin_e2e_test.rs  type_plugin_stress_test.rs  wasm_plugin_e2e_test.rs
evenframe_plugin/: Cargo.toml
evenframe_plugin/src/: lib.rs
(+69 files in other folders)
