[workspace]
members = ["evenframe_core", "evenframe", "evenframe_derive"]
resolver = "2"

[workspace.dependencies]
try_from_expr = { version = "0.1.1", path = "../try_from_expr/try_from_expr" }
evenframe_core = { path = "evenframe_core" }
serde_json = "1.0.142"
regex = "1.11.1"
syn = { version = "2.0.104", features = ["full"] }
tracing = "0.1.41"
convert_case = "0.10.0"
tokio = { version = "1.47.1", features = ["full"] }
toml = "0.9.5"
