[workspace]
members = ["evenframe_core", "evenframe", "evenframe_derive", "evenframe_plugin"]
resolver = "2"

[workspace.dependencies]
try_from_expr = "0.1.1"
evenframe_core = { path = "evenframe_core" }
serde_json = "1.0.142"
regex = "1.11.1"
syn = { version = "2.0.104", features = ["full"] }
tracing = "0.1.41"
convert_case = "0.11.0"
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros"] }
toml = "1.0.3"
