[package]
name = "evenframe"
version = "0.1.1"
edition = "2024"
authors = ["Jakob Lochinski"]
license = "MIT"
description = "A unified framework for TypeScript type generation and database schema synchronization"
repository = "https://github.com/rymskip/evenframe"
documentation = "https://docs.rs/evenframe"
homepage = "https://github.com/rymskip/evenframe"
readme = "../README.md"
keywords = ["typescript", "codegen", "surrealdb", "schema", "types"]
categories = ["development-tools", "database"]

[lib]
path = "src/lib.rs"

[dependencies]

# workspace dependencies
evenframe_core = { version = "0.1.0", path = "../evenframe_core" }
syn = { workspace = true }
tracing = { workspace = true }
convert_case = { workspace = true }
tokio = { workspace = true }
regex = { workspace = true }
toml = { workspace = true }

dotenv = "0.15.0"
evenframe_derive = { version = "0.1.0", path = "../evenframe_derive" }
tracing-subscriber = "0.3"
walkdir = "2.5.0"
linkme = "0.3.33"

[dev-dependencies]
tempfile = "3.10"
mockall = "0.13"
proptest = "1.4"
pretty_assertions = "1.4"
